# todo_actix

api/: .env  Cargo.toml
api/src/: database.rs  main.rs
api/src/routes/: create_user.rs  hello_user.rs  home.rs  mod.rs  todos.rs
todolist_ui/: package-lock.json  package.json
