[package]
edition = "2021"
name = "actix-web-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
serde = {version = "*", features = ["derive"]}
sqlx = {version = "*", features = ["mysql", "runtime-tokio-native-tls"]}
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
